--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "nuxt-ts",
-    "build": "nuxt-ts build",
-    "start": "nuxt-ts start",
-    "export": "nuxt-ts export",
-    "serve": "nuxt-ts serve",
+    "build": "nuxt-ts build && nuxt-ts export",
+    "start": "nuxt-ts serve",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
     "lint": "yarn lint:js && yarn lint:style"
@@ -23,7 +21,6 @@
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^0.4.10",
-    "@nuxtjs/pwa": "^3.0.0-beta.20",
     "@vue/composition-api": "^1.0.0-beta.3",
     "nuxt": "^2.13.0"
   },
@@ -46,5 +43,6 @@
     "stylelint": "^13.6.1",
     "stylelint-config-prettier": "^8.0.1",
     "stylelint-config-standard": "^20.0.0"
-  }
+  },
+  "license": "MIT"
 }
